--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,8 @@
     },
     "require": {
         "php": "^5.6.4 || ^7.0",
-        "laravel/framework": "~5.4",
         "illuminate/support": ">=4.2.0",
-        "laravelcollective/html": "~5.0",
-        "yajra/laravel-datatables-oracle":"~8.0",
-        "yajra/laravel-datatables-buttons": "^3.0",
-        "laracasts/flash": "^3.0"
+        "laravelcollective/html": "~5.0"
     },
     "extra": {
         "laravel": {
